--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "@typescript-eslint/parser": "^6.11.0",
+    "@vitest/coverage-v8": "^0.34.6",
     "eslint": "^8.53.0",
     "eslint-config-prettier": "^9.0.0",
+    "husky": "^8.0.0",
     "lint-staged": "^15.1.0",
     "prettier": "3.1.0",
     "typescript": "^5.2.2",
-    "vitest": "^0.34.6",
-    "husky": "^8.0.0"
+    "vitest": "^0.34.6"
   }
 }
